restro driver full

--- a/www/templates/deliver_sucess.html
+++ b/www/templates/deliver_sucess.html
@@ -1,10 +1,14 @@
 <ion-view hide-nav-bar="true">
    <ion-content class="padding">
    
+   <div align="left">
+	 <i class="ion-android-arrow-dropleft ion_icons_header" ng-click="goBack()" ></i>
+	 </div>
+   
    <div  align="center">
-	<img src="img/order_cus.jpg" style="width:100px;height:100px;>
+	<img src="img/order_cus.jpg" style="width:100px;height:100px;">
 	</div>
-    
+	
    <div  align="center" style="padding-top:3%">
 	  		
 	  		 	<h1>Voucher</h1>
@@ -12,7 +16,7 @@
 				<h2>Order is Delivered</h2>
 	  		
 			</div>
-	  
+	 
 	<div style="padding-top:7%;padding-left:20%" align="center">
 		<div class="row">
 			<button class="button_style">Rate Customer</button>
