--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="col col-50 dash_content_right">
-          {{order.customerloc.address}}
+          {{order.address}}
         </div>
         <img class="dash_cont_img" src="https://s-media-cache-ak0.pinimg.com/originals/9d/86/ab/9d86ab26bc61bc94bf09d352edff07a1.png" width="60" height="60">
         <button class="button button-assertive dash_cont_btn">{{order.totalamount}}</button>
