--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,10 @@
 
 	<ion-view view-title="Browse" hide-nav-bar="true" cache-view="false">
 	
-	 <ion-content overflow-scroll="true" scroll="false">
+	 <ion-content overflow-scroll="true" scroll="false" style="background:url(img/restro.jpg) ;  background-size: 100% 100% !important;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;">
 	<div class="login-wrap" >
 		<div class="login-html">
 			<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
