--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Route Map">
   <ion-content>
-    <ion-list>
-    <div id="map" data-tap-disabled="true" style="width:500px; height: 600px;"></div>
-    </ion-list>
+    
+    <div id="map1" data-tap-disabled="true" style="width:500px; height: 600px;"></div>
+   
   </ion-content>
 </ion-view>
