--- a/www/css/style.css
+++ b/www/css/style.css
@@ -157,6 +157,7 @@ a{color:inherit;text-decoration:none}
 	        transform:rotate(0);
 }
 
+
 .hr{
 	height:2px;
 	margin:30px 0 15px 0;
@@ -226,15 +227,11 @@ a{color:inherit;text-decoration:none}
 	 height:50px; 
 	 width:100%;
 }
-
 .scroll {
     height: 100%;
 }
  
-#map {
-    width: 100%;
-    height: 100%;
-}
+
 .list .item.item-accordion {
   line-height: 38px;
   padding-top: 0;
@@ -248,7 +245,6 @@ a{color:inherit;text-decoration:none}
 .list .item.item-accordion.ng-hide-remove {
   display: block !important;
 }
-
 .row-bottom-border
 {
     border-bottom: 1px solid #CCC;
@@ -263,6 +259,7 @@ a{color:inherit;text-decoration:none}
 .ion_icons_header{
 font-size:50px;
 }
+
 .header-icon-padding { 
 padding-bottom:55px;
 }
@@ -290,7 +287,6 @@ padding-bottom:55px;
 	background-color: #f1f1f1;
 	color: #111 !important;
 }
-
 .button-darken
 {
 	background-color: #42A5F5;
@@ -315,7 +311,6 @@ padding-bottom:55px;
 	background-color: #FF9800;
 	color: #FFF !important;
 }
-
 
 .item-divider {
     padding-top: 8px;
@@ -375,11 +370,10 @@ padding-bottom:55px;
   position: relative;
   padding: initial;
   border-bottom: 6px solid #D2D2D2; }
-  
   .no_padding {
   padding: initial; }
-
-.info_col {
+  
+  .info_col {
   font-size: 12px;
   padding-left: 10px;
   background: #F2F2F2;
@@ -417,8 +411,7 @@ padding-bottom:55px;
 .left_pane_bottom h6 {
   text-align: center;
   color: white; }
-
-.info_content {
+  .info_content {
   margin: 10px 0px; }
 
 .float_bar {
@@ -444,11 +437,6 @@ padding-bottom:55px;
   right: 0;
   top: 50%;
   transform: translate(0%, 20%); }
-
-.gmnoprint, .gm-style-cc, .gm-style div:nth-child(2) {
-  display: none; }
-
-	  
 
 .button_style {
     background-color: #f44336; /* Green */
@@ -487,270 +475,29 @@ padding-bottom:55px;
 
 .order_list i {
   font-size: 20px !important; }
-
-/* COUPON PAGE START*/
-
-.cou_pro_details p{
-  margin : initial;
-  font-size : 12px;
-  margin-bottom: 5px;
-}
-
-.cou_pro_details h4{
-  margin : initial;
-  font-size : 15px;
-  font-weight: 500;
-  margin: 5px 0px;
-}
-
-.textwrapper{
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.coupon_btn{
-    height: 30px !important;
-    min-height: initial;
-    line-height: normal;
-}
-
-.cou_pro_apply{
-    margin: 5%;
-}
-
-.coupon_cards{
-  margin: 10px 0px !important;
-}
-
-/* COUPON PAGE END*/
-
-/*feedback page start*/
   
-fieldset{
-  margin-left : 10% !important;
+.no_border
+{
+	{
+border-top: 0px;
+border-left: 0px;
+border-right: 0px;
+border-bottom: 0px;
 }
-
-fieldset, label { margin: 0; padding: 0; }
-
-h1 { font-size: 1.5em; margin: 10px; }
-
-/****** Style Star Rating Widget *****/
-
-.rating { 
-  border: none;
-  float: left;
 }
-
-.rating > input { display: none; } 
-.rating > label:before { 
-  margin: 10px;
-  font-size: 30px;
-  font-family: FontAwesome;
-  display: inline-block;
-  content: "\f005";
-}
-
-.rating > .half:before { 
-  content: "\f089";
+.centerMarker {
   position: absolute;
-}
-
-.rating > label { 
-  color: #ddd; 
- float: right; 
-}
-
-/***** CSS Magic to Highlight Stars on Hover *****/
-
-.rating > input:checked ~ label, /* show gold star when clicked */
-.rating:not(:checked) > label:hover, /* hover current star */
-.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
-
-.rating > input:checked + label:hover, /* hover current star when changing rating */
-.rating > input:checked ~ label:hover,
-.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
-.rating > input:checked ~ label:hover ~ label { color: #FFED85;  } 
-
-
-
-#wrapper {
-  width: 100%;
-  margin: 30px 20%;
-  padding: 0px 20px;
-}
-.floatleft {
-  float: left;
-}
-[class^="smiley-"] {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 20px;
-}
-.smiley-green {
-  background: #a9db7a;
-  border: 5px solid #92c563;
-  position: relative;
-}
-.smiley-green .left-eye {
-  width: 18%;
-  height: 18%;
-  background: #84b458;
-  position: relative;
-  top: 29%;
-  left: 22%;
-  border-radius: 50%;
-  float: left;
-}
-.smiley-green .right-eye {
-  width: 18%;
-  height: 18%;
-  border-radius: 50%;
-  position: relative;
-  background: #84b458;
-  top: 29%;
-  right: 22%;
-  float: right;
-}
-.smiley-green .smile {
-  position: absolute;
-  top :67%;
-  left: 16.5%;
-  width: 70%;
-  height: 20%;
-  overflow: hidden;
-}
- .smiley-green .smile:after, .smiley-green .smile:before {
-  content: "";
-  position:absolute;
-  top: -50%;
-  left: 0%;
-  border-radius: 50%;
-  background: #84b458;
-  height: 100%;
-  width: 97%;
- }
- .smiley-green .smile:after {
-  background: #84b458;
-  height: 80%;
-  top: -40%;
-  left: 0%;
-}
-
-
-.smiley-yellow {
-  background: #eed16a;
-  border: 5px solid #dbae51;
-  position: relative;
-}
-.smiley-yellow .left-eye {
-  width: 18%;
-  height: 18%;
-  background: #dba652;
-  position: relative;
-  top: 29%;
-  left: 22%;
-  border-radius: 50%;
-  float: left;
-}
-.smiley-yellow .right-eye {
-  width: 18%;
-  height: 18%;
-  border-radius: 50%;
-  position: relative;
-  background: #dba652;
-  top: 29%;
-  right: 22%;
-  float: right;
-}
-.smiley-yellow .smile {
-  position: absolute;
-  top: 67%;
-  left: 19%;
-  width: 65%;
-  height: 14%;
-  background: #dba652;
-  overflow: hidden;
-  border-radius: 8px;
-}
-
-.smiley-red {
-  background: #ee9295;
-  border: 5px solid #e27378;
-  position: relative;
-}
-.smiley-red .left-eye {
-  width: 18%;
-  height: 18%;
-  background: #d96065;
-  position: relative;
-  top: 29%;
-  left: 22%;
-  border-radius: 50%;
-  float: left;
-}
-.smiley-red .right-eye {
-  width: 18%;
-  height: 18%;
-  border-radius: 50%;
-  position: relative;
-  background: #d96065;
-  top: 29%;
-  right: 22%;
-  float: right;
-}
-.smiley-red .smile {
-  position: absolute;
-  top: 57%;
-  left: 16.5%;
-  width: 70%;
-  height: 20%;
-  overflow: hidden;
-}
- .smiley-red .smile:after, .smiley-red .smile:before {
-  content: "";
-  position: absolute;
+  /*url of the marker*/
+  background: url(http://maps.gstatic.com/mapfiles/markers2/marker.png) no-repeat;
+  /*center the marker*/
   top: 50%;
-  left: 0%;
-  border-radius: 50%;
-  background: #d96065;
-  height: 100%;
-  width: 97%;
- }
- .smiley-red .smile:after {
-  background: #d96065;
-  height: 80%;
-  top: 60%;
-  left: 0%;
+  left: 50%;
+  z-index: 1;
+  /*fix offset when needed*/
+  margin-left: -10px;
+  margin-top: -34px;
+  /*size of the image*/
+  height: 34px;
+  width: 20px;
+  cursor: pointer;
 }
-
-
-textarea {
-  margin-top: 20px;
-  height: 100px;
-  -moz-border-bottom-colors: none;
-  -moz-border-left-colors: none;
-  -moz-border-right-colors: none;
-  -moz-border-top-colors: none;
-  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.07);
-  border-color: -moz-use-text-color #FFFFFF #FFFFFF -moz-use-text-color;
-  border-image: none;
-  border-radius: 6px 6px 6px 6px;
-  border-style: none solid solid none;
-  border-width: medium 1px 1px medium;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
-  color: #555555;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 1em;
-  line-height: 1.4em;
-  padding: 5px 8px;
-  transition: background-color 0.2s ease 0s;
-}
-
-
-textarea:focus {
-    background: none repeat scroll 0 0 #FFFFFF;
-    outline-width: 0;
-}
-/*feedback page end*/
