--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,7 +14,7 @@
         
 		<div class = "header-icon-padding"  >
    
-		<div>	<i class="ion-android-arrow-dropleft ion_icons_header" ng-click="goBack()" ng-if="back_show=='1'"></i></div>
+	<!--	<div>	<i class="ion-android-arrow-dropleft ion_icons_header" ng-click="goBack()" ng-if="back_show=='1'"></i></div>-->
 		</div>
 		
       </ion-nav-buttons>
@@ -26,11 +26,12 @@
     
     <ion-content>
       <ion-list>
+	  
 	    <div  ng-click="go_profile()">
 			<div class="item item-avatar" style="padding-top:20px">
 				<img ng-src="img/profile.jpg">
-				<h2><span style="color: red">&nbsp;&nbsp;&nbsp;Nijo Joseph</h2></span>
-				<h3>&nbsp;&nbsp;&nbsp;9856543242</h3>
+				<h2><span style="color: red">&nbsp;&nbsp;&nbsp;{{userdata.name}}</h2></span>
+				<h3>&nbsp;&nbsp;&nbsp;{{userdata.phone}}</h3>
 			</div>
     	</div> 
 		<div class="card">
